# api/manager.events.swagger.yml
@@ -13,11 +13,13 @@ components:
       oneOf:
         - $ref: "#/components/schemas/NewChatEvent"
         - $ref: "#/components/schemas/NewMessageEvent"
+        - $ref: "#/components/schemas/ChatClosedEvent"
       discriminator:
         propertyName: eventType
         mapping:
           NewChatEvent: "#/components/schemas/NewChatEvent"
           NewMessageEvent: "#/components/schemas/NewMessageEvent"
+          ChatClosedEvent: "#/components/schemas/ChatClosedEvent"
 
     NewChatEvent:
       type: object
@@ -87,6 +89,33 @@ components:
           x-go-type: types.MessageID
           x-go-type-import:
             path: "github.com/lapitskyss/chat-service/internal/types"
+        requestId:
+          type: string
+          format: uuid
+          x-go-type: types.RequestID
+          x-go-type-import:
+            path: "github.com/lapitskyss/chat-service/internal/types"
+
+    ChatClosedEvent:
+      type: object
+      required: [ canTakeMoreProblems, chatId, eventId, eventType, requestId ]
+      properties:
+        canTakeMoreProblems:
+          type: boolean
+        chatId:
+          type: string
+          format: uuid
+          x-go-type: types.ChatID
+          x-go-type-import:
+            path: "github.com/lapitskyss/chat-service/internal/types"
+        eventId:
+          type: string
+          format: uuid
+          x-go-type: types.EventID
+          x-go-type-import:
+            path: "github.com/lapitskyss/chat-service/internal/types"
+        eventType:
+          type: string
         requestId:
           type: string
           format: uuid
